--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -41,7 +41,7 @@
                 </div>
         </section>
         
-            <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto programando">
+            <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto programando">
     
     </main>
     <footer class="rodape">
