--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
           </section>
 
-        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto programando">
     </main>
 
     <footer class="rodape">
