--- a/curriculo.html
+++ b/curriculo.html
@@ -42,7 +42,7 @@
             </div>
         </section>
      
-        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto programando">
              
     </main>
 
